Remove usage of Google ImmutableSet [HZ-4214] (#503)
GitOrigin-RevId: d398bb6ad510aaa260f1c7916040b73ad5b785f1